js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.8.kt
fun funB() = listOf(fun4()).joinToString()
